// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range<number> ASC #next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`Range<number> ASC #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`Range<number> ASC #next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`Range<number> ASC #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Range<number> DESC #next() 1`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`Range<number> DESC #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`Range<number> DESC #next() 3`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`Range<number> DESC #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Range<string> ASC #next() 1`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`Range<string> ASC #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`Range<string> ASC #next() 3`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`Range<string> ASC #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Range<string> DESC #next() 1`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`Range<string> DESC #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`Range<string> DESC #next() 3`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`Range<string> DESC #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`range() 1`] = `
 {
  "source":  {
    "done": true,
    "end": Infinity,
    "start": Infinity,
    "state": Infinity,
    "step": 0,
  },
}
`;

exports[`range() 2`] = `
 {
  "source":  {
    "done": false,
    "end": 0,
    "start": 9007199254740991,
    "state": 9007199254740991,
    "step": -1,
  },
}
`;
